--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ serde_derive = "1.0"
 serde_json = "1.0"
 keyring = "0.7"
 tui = "0.5"
+termion = "1.5"
 glob = "0.3"
 pandora-rs2 = "0.1"
 reqwest = "0.9"
