--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,16 +6,16 @@ edition = "2018"
 
 [dependencies]
 clap = "2.33"
-log = "0.4"
-loggerv = "0.7"
+log = { version = "0.4", default-features = true, features = ["std"] }
 sys-info = "0.5"
 dirs = "1.0"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
 keyring = "0.7"
-tui = "0.5"
 termion = "1.5"
+tui = "0.5"
+tui-logger = "0.3"
 glob = "0.3"
 pandora-rs2 = "0.1"
 reqwest = "0.9"
