Continue work on adding logger pane, added event loop

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,8 @@ serde_derive = "1.0"
 serde_json = "1.0"
 keyring = "0.7"
 termion = "1.5"
-tui = "0.5"
+# tui-logger 0.3 requires that we use tui 0.4, because its API leaks tui objects
+tui = "0.4"
 tui-logger = "0.3"
 glob = "0.3"
 pandora-rs2 = "0.1"
