--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,10 +5,9 @@ authors = ["Will Page <compenguy@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-clap = "2.32"
+clap = "2.33"
 log = { version = "0.4", default-features = true, features = ["std"] }
-#async-std = "0.99"
-#flexi_logger = "0.13"
+flexi_logger = "0.13"
 mktemp-rs = "0.2"
 sys-info = "0.5"
 dirs = "1.0"
@@ -16,10 +15,6 @@ serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
 keyring = "0.7"
-cursive = { version = "0.12", default-features = false, features = ["crossterm-backend"] }
 glob = "0.3"
 pandora-rs2 = "0.1"
-reqwest = "0.9"
-id3 = "0.3"
-simplemad = "0.9"
-
+reqwest = { version = "0.10", default-features = true, features = ["blocking"] }
