Add support for selectable audio quality/format

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 clap = "2.33"
 log = { version = "0.4", default-features = true, features = ["std"] }
 flexi_logger = "0.13"
-mktemp-rs = "0.2"
+chrono = "0.4"
 sys-info = "0.5"
 dirs = "1.0"
 serde = "1.0"
@@ -22,3 +22,4 @@ termion = "1.5"
 crossterm = "0.14"
 pbr = "1.0"
 mp4parse = "0.11"
+mp3-duration = "0.1"
