--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,8 @@ log = { version = "0.4", default-features = true, features = ["std"] }
 flexi_logger = "0.13"
 chrono = "0.4"
 sys-info = "0.5"
-dirs = "1.0"
+dirs = "1"
+mktemp = "0.4"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
@@ -20,7 +21,7 @@ pandora-api = { git = "https://github.com/compenguy/pandora-api.git" }
 reqwest = { version = "0.10", default-features = true, features = ["blocking"] }
 termion = "1.5"
 crossterm = "0.14"
-pbr = "1.0"
+pbr = "1"
 mp4parse = "0.11"
-mp3-duration = "0.1"
+id3 = "0.5"
 rodio = "0.10"
