--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,19 +12,19 @@ flexi_logger = "0.13"
 chrono = "0.4"
 sys-info = "0.5"
 dirs = "1"
-mktemp = "0.4"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
 keyring = "0.7"
-glob = "0.3"
 pandora-api = { git = "https://github.com/compenguy/pandora-api.git" }
 reqwest = { version = "0.10", default-features = true, features = ["blocking"] }
-crossterm = "0.16"
-ellipse = "0.2"
-crossbeam-channel = "0.4"
-pbr = "1"
-mp3-duration = { git = "https://github.com/compenguy/mp3-duration.git" }
-mp4parse = "0.11"
-id3 = "0.5"
 rodio = "0.10"
+cursive = { version = "0.14", default-features = false, features = ["crossterm-backend", "toml"] }
+ellipse = "0.2"
+mktemp = "0.4"
+id3 = "0.5"
+mp3-duration = "^0.1.9"
+
+[profile.release]
+opt-level = "z"
+lto = true
