Adding README and LICENSE information

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,8 @@ name = "panharmonicon"
 version = "0.1.0"
 authors = ["Will Page <compenguy@gmail.com>"]
 edition = "2018"
+license = "Apache-2.0 AND MIT AND BSD-2-Clause AND BSD-3-Clause AND CC0-1.0 AND MPL-2.0 AND Zlib"
+repository = "https://github.com/compenguy/panharmonicon"
 
 [dependencies]
 human-panic = "1"
