--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,8 @@ keyring = "0.7"
 pandora-api = { git = "https://github.com/compenguy/pandora-api.git" }
 reqwest = { version = "0.10", default-features = true, features = ["blocking"] }
 rodio = "0.10"
-cursive = { version = "0.14", default-features = false, features = ["crossterm-backend", "toml"] }
+# cursive 0.14 has a bug that causes empty popup selectviews to panic
+cursive = { git = "https://github.com/compenguy/cursive.git", default-features = false, features = ["crossterm-backend", "toml"] }
 ellipse = "0.2"
 mktemp = "0.4"
 id3 = "0.5"
