--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
 keyring = "0.7"
-pandora-api = { git = "https://github.com/compenguy/pandora-api.git" }
+pandora-api = "0.2"
 reqwest = { version = "0.10", default-features = true, features = ["blocking"] }
 rodio = "0.10"
 # cursive 0.14 has a bug that causes empty popup selectviews to panic
