Allow disabling emoji labels, for terminals/fonts that don't work well

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,14 @@ edition = "2018"
 license = "Apache-2.0 AND MIT AND BSD-2-Clause AND BSD-3-Clause AND CC0-1.0 AND MPL-2.0 AND Zlib"
 repository = "https://github.com/compenguy/panharmonicon"
 
+[features]
+default = ["emoji_labels"]
+emoji_labels = []
+
+[target.'cfg(windows)'.features]
+default = []
+emoji_labels = []
+
 [dependencies]
 human-panic = "1"
 clap = "2.33"
