--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,6 +16,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: Install missing dependencies: alsa libs
+      run: sudo apt-get install libasound2-dev
     - name: Build
       run: cargo build --verbose
     - name: Run tests
