--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,7 +18,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install missing linux dependencies
       if: contains(matrix.os, 'ubuntu')
-      run: sudo apt-get install libasound2-dev
+      run: sudo apt-get install libasound2-dev libdbus-1-dev
     - name: Build
       run: cargo build --verbose
     - name: Run tests
