--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -79,7 +79,7 @@ jobs:
         asset_content_type: application/zip
 
     - name: Publish debug artifacts
-      if: github.event.action == 'published'
+      if: github.event_name == 'release'
       uses: actions/upload-release-asset@v1.0.1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
