Add binaries to release archives without paths
7z adds files to the archive with all the specified relative path elements if the provide path is unrooted (foo/bar/baz.exe).  In order to have the files added to the archive without path information, it needs to be rooted under some location, e.g. ./foo/bar/baz.exe, ~/baz.exe, or /home/user/baz.exe.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,7 +53,7 @@ jobs:
         ARCHIVE_NAME: ${{ matrix.release-name }}
       run: |
         mkdir -p artifacts
-        7z a artifacts/${ARCHIVE_NAME}.zip README.md LICENSE.txt target/release/panharmonicon${PROGRAM_EXT}
+        7z a artifacts/${ARCHIVE_NAME}.zip README.md LICENSE.txt ./target/release/panharmonicon${PROGRAM_EXT}
 
     # people don't generally want the debug symbols, so we'll put those in a separate archive
     - name: Archive debug artifacts
@@ -63,7 +63,7 @@ jobs:
         ARCHIVE_NAME: ${{ matrix.release-name }}-debug
       run: |
         mkdir -p artifacts
-        7z a artifacts/${ARCHIVE_NAME}.zip target/release/panharmonicon${DEBUG_EXT}
+        7z a artifacts/${ARCHIVE_NAME}.zip ./target/release/panharmonicon${DEBUG_EXT}
 
     # publish the archives made in the previous steps
     # but ONLY if this was triggered by a 'published' event
