--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "panharmonicon"
 description = "A command line music player, unofficial client for Pandora"
-version = "0.2.0"
+version = "0.3.0"
 authors = ["Will Page <compenguy@gmail.com>"]
 edition = "2018"
 license = "Apache-2.0 AND MIT AND BSD-2-Clause AND BSD-3-Clause AND CC0-1.0 AND MPL-2.0 AND Zlib"
@@ -18,15 +18,16 @@ thiserror = "1"
 clap = "2.33"
 log = { version = "0.4", default-features = true, features = ["std"] }
 lazy_static = "1"
-flexi_logger = "0.13"
+flexi_logger = { version = "0.15.1", default-features = false, features = ["colors"] }
 chrono = "0.4"
 dirs = "1"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
-keyring = "0.7"
+keyring = "0.8"
 pandora-api = "0.3.1"
 reqwest = { version = "0.10", default-features = true, features = ["blocking"] }
+crossbeam-channel = "0.4"
 rodio = "0.10"
 # cursive 0.14 has a bug that causes empty popup selectviews to panic
 cursive = { git = "https://github.com/gyscos/cursive.git", default-features = false, features = ["crossterm-backend", "toml"] }
