--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "panharmonicon"
 description = "A command line music player, unofficial client for Pandora"
-version = "0.3.0"
+version = "0.3.1"
 authors = ["Will Page <compenguy@gmail.com>"]
 edition = "2018"
 license = "Apache-2.0 AND MIT AND BSD-2-Clause AND BSD-3-Clause AND CC0-1.0 AND MPL-2.0 AND Zlib"
@@ -15,7 +15,7 @@ emoji_labels = []
 human-panic = "1"
 anyhow = "1"
 thiserror = "1"
-clap = "2.33"
+clap = "3.0.0-beta.1"
 log = { version = "0.4", default-features = true, features = ["std"] }
 lazy_static = "1"
 flexi_logger = { version = "0.15.1", default-features = false, features = ["colors"] }
@@ -28,7 +28,7 @@ keyring = "0.8"
 pandora-api = "0.3.1"
 reqwest = { version = "0.10", default-features = true, features = ["blocking"] }
 crossbeam-channel = "0.4"
-rodio = "0.10"
+rodio = "0.11"
 # cursive 0.14 has a bug that causes empty popup selectviews to panic
 cursive = { git = "https://github.com/gyscos/cursive.git", default-features = false, features = ["crossterm-backend", "toml"] }
 mktemp = "0.4"
