--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "panharmonicon"
 description = "A command line music player, unofficial client for Pandora"
-version = "0.3.2"
+version = "0.3.3"
 authors = ["Will Page <compenguy@gmail.com>"]
 edition = "2018"
 license = "Apache-2.0 AND MIT AND BSD-2-Clause AND BSD-3-Clause AND CC0-1.0 AND MPL-2.0 AND Zlib"
@@ -15,20 +15,21 @@ emoji_labels = []
 human-panic = "1"
 anyhow = "1"
 thiserror = "1"
-clap = "3.0.0-beta.1"
+clap = { version = "3.0.0-beta.2", default-features = false, features = ["color", "std", "cargo"] }
 log = { version = "0.4", default-features = true, features = ["std"] }
 lazy_static = "1"
-flexi_logger = { version = "0.15", default-features = false, features = ["colors"] }
+flexi_logger = { version = "0.16", default-features = false, features = ["colors"] }
 chrono = "0.4"
 dirs = "3"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
-keyring = "0.9"
+keyring = "0.10"
 pandora-api = "0.3.1"
 reqwest = { version = "0.10", default-features = true, features = ["blocking"] }
 crossbeam-channel = "0.4"
-rodio = "0.11"
+rodio = { version = "0.13", default-features = false, features = ["mp3"] }
+cpal = "0.13"
 cursive = { version = "0.15", default-features = false, features = ["crossterm-backend", "toml"] }
 mktemp = "0.4"
 id3 = "0.5"
