--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,21 +18,21 @@ thiserror = "1"
 clap = { version = "3.0.0-beta.2", default-features = false, features = ["color", "std", "cargo"] }
 log = { version = "0.4", default-features = true, features = ["std"] }
 lazy_static = "1"
-flexi_logger = { version = "0.16", default-features = false, features = ["colors"] }
+flexi_logger = { version = "0.17", default-features = false, features = ["colors"] }
 chrono = "0.4"
 dirs = "3"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
 keyring = "0.10"
-pandora-api = "0.3.1"
-reqwest = { version = "0.10", default-features = true, features = ["blocking"] }
-crossbeam-channel = "0.4"
+pandora-api = { git = "https://github.com/compenguy/pandora-api.git", version = "0.4.0" }
+reqwest = { version = "0.11", default-features = true, features = ["blocking"] }
+crossbeam-channel = "0.5"
 rodio = { version = "0.13", default-features = false, features = ["mp3"] }
 cpal = "0.13"
-cursive = { version = "0.15", default-features = false, features = ["crossterm-backend", "toml"] }
+cursive = { version = "0.16", default-features = false, features = ["crossterm-backend", "toml"] }
 mktemp = "0.4"
-id3 = "0.5"
+id3 = "0.6"
 
 [target.'cfg(windows)'.build-dependencies]
 winres = "0.1"
