--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,9 +30,10 @@ reqwest = { version = "0.11", default-features = true, features = ["blocking"] }
 crossbeam-channel = "0.5"
 rodio = { version = "0.13", default-features = false, features = ["mp3"] }
 cpal = "0.13"
+redlux = "0.2"
+mp4ameta = "0.9"
 cursive = { version = "0.16", default-features = false, features = ["crossterm-backend", "toml"] }
 mktemp = "0.4"
-id3 = "0.6"
 
 [target.'cfg(windows)'.build-dependencies]
 winres = "0.1"
