--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "panharmonicon"
 description = "A command line music player, unofficial client for Pandora"
-version = "0.4.3"
+version = "0.5.0"
 authors = ["Will Page <compenguy@gmail.com>"]
 edition = "2018"
 license = "Apache-2.0 AND MIT AND BSD-2-Clause AND BSD-3-Clause AND CC0-1.0 AND MPL-2.0 AND Zlib"
@@ -17,23 +17,23 @@ anyhow = "1"
 thiserror = "1"
 clap = { version = "3.0.0-beta.2", default-features = false, features = ["color", "std", "cargo"] }
 log = { version = "0.4", default-features = true, features = ["std"] }
-flexi_logger = { version = "0.22", default-features = false, features = ["colors"] }
+flexi_logger = { version = "0.22", default-features = false, features = ["colors", "use_chrono_for_offset"] }
 chrono = "0.4"
 dirs = "4"
 serde = "1"
 serde_derive = "1"
 serde_json = "1"
 keyring = "1"
-pandora-api = { git = "https://github.com/compenguy/pandora-api.git", version = "0.4.0" }
-reqwest = { version = "0.11", default-features = true, features = ["blocking"] }
+pandora-api = "0.5"
+surf = { version = "2", default-features = false, features = ["hyper-client"] }
 rodio = { version = "0.14", default-features = false }
 cpal = "0.13"
 redlux = "0.4"
 mp4ameta = "0.11"
 cursive = { version = "0.16", default-features = false, features = ["crossterm-backend", "toml"] }
-async-std = "1"
+futures-lite = "1"
+async-std = { version = "1", features = ["attributes", "unstable"] }
 async-broadcast = "0.3"
-mktemp = "0.4"
 
 [target.'cfg(windows)'.build-dependencies]
 winres = "0.1"
