--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,21 +17,21 @@ anyhow = "1"
 thiserror = "1"
 clap = { version = "3", default-features = false, features = ["std", "cargo"] }
 log = { version = "0.4", default-features = true, features = ["std"] }
-flexi_logger = { version = "0.22", default-features = false, features = ["use_chrono_for_offset"] }
+flexi_logger = { version = "0.25", default-features = false }
 chrono = { version = "0.4", default-features = false, features = ["std"] }
 dirs = "4"
 serde = "1"
 serde_derive = "1"
 serde_json = "1"
 keyring = "1"
-pandora-api = "0.5"
-surf = { version = "2", default-features = false, features = ["hyper-client"] }
-rodio = { version = "0.15", default-features = false }
-redlux = "0.5"
+pandora-api = "0.6"
+tokio = { version = "1", default-features = false, features = ["fs", "io-util", "time", "rt", "macros"] }
+reqwest = { version = "0.11", features = ["stream"] }
+async-broadcast = "0.5"
+rodio = { version = "0.16", default-features = false }
+redlux = "0.6"
 mp4ameta = "0.11"
-cursive = { version = "0.18", default-features = false, features = ["crossterm-backend", "toml"] }
-async-std = { version = "1", features = ["attributes", "unstable"] }
-async-broadcast = "0.4"
+cursive = { version = "0.20", default-features = false, features = ["crossterm-backend", "toml"] }
 
 [target.'cfg(windows)'.build-dependencies]
 winres = "0.1"
