--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,11 +34,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - uses: actions-rs/toolchain@v1
-      with:
-        toolchain: stable
+    - uses: dtolnay/rust-toolchain@stable
     - uses: Swatinem/rust-cache@v2
-    - uses: actions-rs/cargo@v1
 
     - name: Install missing dependencies (linux)
       if: contains(matrix.os, 'ubuntu')
