--- a/.github/workflows/update_licenses.yml
+++ b/.github/workflows/update_licenses.yml
@@ -15,9 +15,7 @@ jobs:
     - uses: actions/checkout@v3
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
-    - uses: actions-rs/toolchain@v1
-      with:
-        toolchain: stable
+    - uses: dtolnay/rust-toolchain@stable
     - name: Install license processing tools
       run: |
         cargo install cargo-about
