--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ emoji_labels = []
 [dependencies]
 anyhow = "1"
 thiserror = "1"
-clap = { version = "4", default-features = false, features = ["std", "cargo"] }
+clap = { version = "4", default-features = false, features = ["std", "cargo", "help"] }
 log = { version = "0.4", default-features = true, features = ["std"] }
 flexi_logger = { version = "0.27", default-features = false }
 chrono = { version = "0.4", default-features = false, features = ["std"] }
