Massive refactor, probably very broken still
This refactor is built around changes to the messaging between
subsystems.  The model receives requests from other parts of the
system, and sends out state updates about what's changed in response to
the requests.  Consequently, the requests sent to the model are a
multiple-producer-single-consumer type of channel, while the state
updates from the model to all the subsystems are a broadcast model.

In order to make the abstractions cleaner and clearer, all audio control
logic (decoding a track and playing it, volume, muting, pausing) were
moved out into a separate subsystem.  This seems to create a much
cleaner separation of concerns, making it much easier to reason about
what's going on in the code being looked at.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ flexi_logger = { version = "0.28", default-features = false }
 chrono = { version = "0.4", default-features = false, features = ["std"] }
 dirs = "5"
 serde = "1"
+either = "1"
 serde_derive = "1"
 serde_json = "1"
 keyring = "2"
@@ -31,6 +32,7 @@ rodio = { version = "0.17", default-features = false }
 redlux = { version = "0.7", git = "https://github.com/compenguy/redlux.git" }
 mp4ameta = "0.11"
 cursive = { version = "0.20", default-features = false, features = ["crossterm-backend", "toml"] }
+rand = "0.8"
 
 [target.'cfg(windows)'.build-dependencies]
 winres = "0.1"
