--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ emoji_labels = []
 [dependencies]
 anyhow = "1"
 thiserror = "1"
+human-panic = "2"
 clap = { version = "4", default-features = false, features = ["std", "cargo", "help"] }
 log = { version = "0.4", default-features = true, features = ["std"] }
 flexi_logger = { version = "0.28", default-features = false }
