--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,8 @@ license = "Apache-2.0 AND MIT AND BSD-2-Clause AND BSD-3-Clause AND CC0-1.0 AND 
 repository = "https://github.com/compenguy/panharmonicon"
 
 [features]
-default = ["emoji_labels"]
+default = ["emoji_labels", "mpris"]
+mpris = ["dep:mpris-server"]
 emoji_labels = []
 
 [dependencies]
@@ -35,7 +36,10 @@ mp4ameta = "0.11"
 cursive = { version = "0.20", default-features = false, features = ["crossterm-backend", "toml"] }
 rand = "0.8"
 
-[target.'cfg(windows)'.build-dependencies]
+[target.'cfg(target_os = "linux")'.dependencies]
+mpris-server = { version = "0.8", optional = true }
+
+[target.'cfg(target_os = "windows")'.build-dependencies]
 winres = "0.1"
 chrono = "0.4"
 
