--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,9 @@ license = "Apache-2.0 AND MIT AND BSD-2-Clause AND BSD-3-Clause AND CC0-1.0 AND 
 repository = "https://github.com/compenguy/panharmonicon"
 
 [features]
-default = ["emoji_labels", "mpris_server"]
+default = ["emoji_labels", "mpris_server", "term_ui"]
 mpris_server = ["dep:mpris-server"]
+term_ui = ["dep:cursive"]
 emoji_labels = []
 
 [dependencies]
@@ -33,9 +34,8 @@ reqwest = { version = "0.13", features = ["stream"] }
 async-broadcast = "0.7"
 redlux = { version = "0.7", git = "https://github.com/compenguy/redlux.git" }
 mp4ameta = "0.13"
-cursive = { version = "0.20", default-features = false, features = ["crossterm-backend", "toml"] }
+cursive = { version = "0.21", optional = true, default-features = false, features = ["crossterm-backend", "toml"] }
 mpris-server = { version = "0.9", optional = true }
-rand = "0.10"
 
 [target.'cfg(windows)'.build-dependencies]
 winres = "0.1"
