--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,7 @@ serde_json = "1"
 keyring = "2"
 pandora-api = "0.6"
 futures = "0.3"
-tokio = { version = "1", default-features = false, features = ["fs", "io-util", "macros", "rt", "time"] }
+tokio = { version = "1", default-features = false, features = ["fs", "io-util", "macros", "rt-multi-thread", "sync", "time"] }
 reqwest = { version = "0.13", features = ["stream"] }
 async-broadcast = "0.7"
 redlux = { version = "0.7", git = "https://github.com/compenguy/redlux.git" }
