--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ license = "Apache-2.0 AND MIT AND BSD-2-Clause AND BSD-3-Clause AND CC0-1.0 AND 
 repository = "https://github.com/compenguy/panharmonicon"
 
 [features]
-default = ["emoji_labels", "mpris_server", "term_ui"]
+default = ["emoji_labels", "term_ui"]
 mpris_server = ["dep:mpris-server"]
 term_ui = ["dep:cursive"]
 emoji_labels = []
