--- a/about.toml
+++ b/about.toml
@@ -3,8 +3,10 @@ accepted = [
     "BSD-2-Clause",
     "BSD-3-Clause",
     "CC0-1.0",
+    "ISC",
     "MIT",
     "MPL-2.0",
+    "OpenSSL",
     "Unicode-3.0",
     "Unicode-DFS-2016",
     "WTFPL",
